# Factory-bot

./: README.md
Manager-dev/: .env.template  FactoryManager.drawio  README.md  docker-compose.yml  pyproject.toml
Manager-dev/.github/workflows/: deploy-dev.yml
Manager-dev/app/: __main__.py  filters.py  keyboards.py  states.py
Manager-dev/app/config/: db.py  genexcel.py  keyboards.py  labels.py  messages.py  roles.py
Manager-dev/app/db/: models.py  requests.py
Manager-dev/app/middlewares/: album.py  logging.py
Manager-dev/app/roles/: __init__.py  admin.py  master.py  owner.py  user.py
Manager-dev/app/utils/: chatTools.py  genexcel.py  isowner.py  logger.py  month.py  uploader.py
